[package]
name = "miband-heart-rate"
authors = ["Tnze"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Tnze/miband-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.8"
futures-lite = "2.6.0"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-ws = "0.2.5"
tokio-stream = "0.1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.12"
log = "0.4"
env_logger = "0.11.3"
clap = { version = "4.5.17", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }